Added board_msp430fr5739 board Added msp430fr5739 board

--- a/hw/msp430/Makefile.objs
+++ b/hw/msp430/Makefile.objs
@@ -1,3 +1,6 @@
 obj-$(CONFIG_MSP430) += msp430f5x.o
 obj-$(CONFIG_MSP430) += msp430f1x.o
+obj-$(CONFIG_MSP430) += msp430fr5739.o
+obj-$(CONFIG_MSP430) += boards/board_msp430fr5739.o
+
 
