Added base files of all peripheral to MSP430FR5739 mcu.

--- a/hw/msp430/Makefile.objs
+++ b/hw/msp430/Makefile.objs
@@ -1,3 +1,35 @@
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_ADC10_B.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_CS__Clock_System.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Comparator_D.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_CRC16.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_DMA.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_FRAM.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_MPU.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_MPY_16__Multiplier__16_Bit_Mode.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_MPY_32__Multiplier__32_Bit_Mode.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_PMM__Power_Management_System.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Port_A.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Port_1_2.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Port_B.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Port_3_4.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Port_J.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Shared_Reference.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_RTC_B__Real_Time_Clock.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_SFR__Special_Function_Registers.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_SYS__System_Module.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Timer0_A3.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Timer1_A3.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Timer0_B3.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Timer1_B3.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Timer2_B3.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_USCI_A0__UART_Mode.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_USCI_A0__SPI_Mode.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_USCI_B0__SPI_Mode.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_USCI_B0__I2C_Mode.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_USCI_A1__UART_Mode.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_USCI_A1__SPI_Mode.o
+obj-$(CONFIG_MSP430) += peripherals/MSP430FR5739/MSP430FR5739_Watchdog_Timer.o
+
 obj-$(CONFIG_MSP430) += msp430f5x.o
 obj-$(CONFIG_MSP430) += msp430f1x.o
 obj-$(CONFIG_MSP430) += msp430fr5739.o
